--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "lightweight-charts": "^5.0.8",
     "next": "15.4.4",
     "openai": "^5.10.2",
